--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -750,4 +750,39 @@ div.collapsible > div#toModal > div.x_content {
   opacity: 1;
 }
 
+.item.validateAlert .alert {
+  float: left;
+  margin: 15px 0 0 0;
+  padding: 3px 10px;
+  color: #FFF;
+  border-radius: 4px;
+  background-color: #CE5454;
+  max-width: 100%;
+  white-space: inherit;
+  position: relative;
+  left: -15px;
+  opacity: 0;
+  z-index: 1;
+  transition: 0.15s ease-out;
+}
+
+.item.validateAlert .alert::after {
+  content: '';
+  display: block;
+  height: 0;
+  width: 0;
+  border-color: transparent #CE5454 transparent transparent;
+  border-style: solid;
+  border-left: 11px solid transparent;
+  border-right: 11px solid transparent;
+  border-bottom: 7px solid #CE5454;
+  position: absolute;
+  left: 3%;
+  top: -18px;
+}
+.item.bad.validateAlert.bad .alert {
+  left: 0;
+  opacity: 1;
+}
+
 
