--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiValidate.html
@@ -6,6 +6,31 @@
 </head>
 <body>
 	<div layout:fragment="content">
+
+		<!-- modale riepilogo valutazioni  -->
+		<div id="altreValutazioni-modal" class="modal fade modal-altreValutazioni"
+			data-model-index="1" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">
+							<span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel"
+							th:text="#{label.valutazioni_effettuate(#{label.allegati})}">Valutazioni effettuate</h4>
+					</div>
+					<div class="modal-body">
+
+						<!-- fragment tutte le valutazioni -->
+						<th:block th:include="valutazione/valutazioneShowAll :: showAll(accreditamentoAllegatiWrapper)"></th:block>
+
+					</div>
+
+
+				</div>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -13,6 +38,7 @@
 						<h2 th:text="#{label.valutazione} + ' ' + #{label.allegati}">allegati</h2>
 						<div class="pull-right buttons-header">
 							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamentoAllegati" type="submit"></button>
+							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}/validate?tab=tab3|}"></a>
 						</div>
 						<div class="clearfix"></div>
